# web-server.rs

./: .github-ci.yaml  .gitignore  .lefthook.toml  .mise.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md  Taskfile.dist.yaml  deny.toml  justfile  pipelight.yaml  sonar-project.properties
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yaml  autofix.yaml  changelog.yaml  cross-build.yaml  dependency-review.yml  greeting.yaml  health.yaml  issues.yaml  licenses.yaml  lint.yaml  pr-labels.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  test-with-coverage.yaml
backpack/: Cargo.toml
backpack/examples/openapi/: Cargo.toml
backpack/examples/openapi/src/: main.rs
backpack/src/: banner.rs  lib.rs
manifests/: deploy.yaml
